# orbiteer

./: .flake8  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: main.yml
examples/: simple_echo.py
examples/graphed/: graph_example.py  pyproject.toml  run_graph_example.sh
orbiteer/: orbiteer.py  runner.py  shared_types.py
orbiteer/inputgenerators/: rangegenerator.py
orbiteer/iterators/: __init__.py  base.py  datetimeiterator.py
orbiteer/notifiers/: base.py
orbiteer/optimizers/: __init__.py  base.py  ratio.py
orbiteer/targets/: __init__.py  base.py  command.py
scripts/: format.sh  lint.sh  setup.sh  test.sh
tests/: test_runner.py
tests/test_inputgenerators/: test_rangegenerator.py
tests/test_iterators/: test_datetimeiterator.py
tests/test_optimizers/: test_ratio_optimizer.py
tests/test_targets/: test_callable_target.py  test_command_target.py
