[tool.poetry]
name = "orbiteer"
version = "0.1.0"
description = ""
authors = ["Avery Fischer <avery@averyjfischer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.5"}
dlint = "^0.11.0"
flake8 = "^3.9.2"
flake8-2020 = "^1.6.0"
flake8-bugbear = "^21.4.3"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.5.0"
flake8-eradicate = "^1.1.0"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
target-version = ['py39']
