[tool.poetry]
name = "orbiteer"
version = "0.1.0"
description = ""
authors = ["Avery Fischer <avery@averyjfischer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.1"}
dlint = "^0.11.0"
flake8 = "^3.9.2"
flake8-2020 = "^1.6.0"
flake8-bugbear = "^21.9.2"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.7.0"
flake8-eradicate = "^1.1.0"
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
files = "**/*.py"
exclude = ".venv/*"
ignore_errors = false
warn_no_return = true
strict_equality = true
strict_optional = true
warn_unreachable = true
check_untyped_defs = true
namespace_packages = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
explicit_package_bases = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["."]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
