[tool.poetry]
name = "orbiteer_graph_examples"
version = "0.1.0"
description = "Visual examples for Orbiteer"
authors = ["Avery Fischer <avery@averyjfischer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
matplotlib = "^3.5.1"
orbiteer = { path = "../../", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
